src/test/deca/codegen/invalid/created/ArithmeticExp.deca
// Description:
//    Division par 0
// Resultats:
//    Error: division by 0


{
    print(2/0);
}